fix java 21 syntax